Allow running units test on jdk17